// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fields reducer Set field divider end 1`] = `
Object {
  "dividerEnd": " & ",
  "dividerList": "",
  "isPristine": true,
  "label": "",
  "options": Array [],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set field divider list 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": ", ",
  "isPristine": true,
  "label": "",
  "options": Array [],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set field is pristine 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": true,
  "label": "",
  "options": Array [],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set field is pristine 2`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": false,
  "label": "",
  "options": Array [],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set field options 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": true,
  "label": "",
  "options": Array [
    "Pizza",
    "Cheese Cake",
    "Cheese",
  ],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set field type 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": true,
  "label": "",
  "options": Array [],
  "type": "url",
  "value": "",
}
`;

exports[`Fields reducer Set ticket name 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": true,
  "label": "Website",
  "options": Array [],
  "type": "",
  "value": "",
}
`;

exports[`Fields reducer Set ticket value 1`] = `
Object {
  "dividerEnd": "",
  "dividerList": "",
  "isPristine": true,
  "label": "",
  "options": Array [],
  "type": "",
  "value": "https://theeventscalendar.com/",
}
`;
